--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,29 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="https://cloud.tencent.com/favicon.ico" />
-  <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="favicon.ico"/>
+    <title>猫头鹰助理</title>
 </head>
 
 <body>
-  <noscript>
+<noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-      Please enable it to continue.</strong>
-  </noscript>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
+        Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
 </body>
 
 </html>
 <script src="./debug/GenerateTestUserSig.js" type="module"></script>
 <script src="./debug/lib-generate-test-usersig.min.js"></script>
+
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+</style>
